[package]
name = "cypher-v3-reimbursement"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cypher_v3_reimbursement"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test-bpf = []

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.26.0" }
solana-program = "~1.14.11"
static_assertions = "1.1"

[dev-dependencies]
solana-sdk = { version = "~1.14.11", default-features = false }
solana-program-test = "~1.14.11"
solana-logger = "~1.14.11"
async-trait = "0.1.52"
bytemuck = "^1.7.2"
spl-token = { version = "^3.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^1.0.3", features = ["no-entrypoint"] }
log = "0.4.14"
env_logger = "0.9.0"
lazy_static = "1.4.0"
